Applied project code format